refactor(diff-build): simplify script and add bazel config change detection
- Rewrite diff-build to use bazel run @bazel-diff instead of a downloaded jar
- Add early-exit full build/test when .bazelversion or .bazelrc changes
- Add --skip_incompatible_explicit_targets to handle cross-platform targets
- Use bazel query to categorize targets instead of bash loops
- Update Bazel module dependencies